# hsdocdb

./: .gitignore  default.nix  hsrelex-docdb.cabal  release.nix  sample.txt  shell.nix  test.http  test.json
config/: hsrelex-import.yaml
src/: Config.hs  Dictionary.hs  InvertedIndex.hs  Main.hs  NLP.hs  SentencePersistence.hs  Test.hs  Types.hs
src/Internal/: Types.hs
