cabal-version:  1.12
name:           hsrelex-docdb
version:        0.0.1
author:         Michael Welt 
maintainer:     michael.welt@uni-ulm.de
copyright:      2019 Michael Welt 
build-type:     Simple

executable hsrelex-docdb-exe
  main-is: Main.hs
  other-modules:
      Paths_hsrelex_docdb
      Dictionary
      External.Types
      Internal.Types
      InvertedIndex
      NLP
      SentencePersistence
      Test
      Types
  hs-source-dirs:
      src 
  ghc-options: -O2 -threaded -rtsopts -prof -fprof-auto "-with-rtsopts=-N -p -s -h"
  build-depends:
      aeson
    , lens
    , lens-aeson
    , async-pool
    , base >=4.7 && <5
    , utf8-string
    , bytestring
    , binary
    , text
    , unordered-containers
    , containers
    , directory
    , hexpat
    , mtl
    , exception-transformers
    , say
    , string-conversions
    , transformers
    , vector
    , zlib
    , yaml
    , connection
    , http-client
    , split
  default-language: Haskell2010